@@ -301,8 +301,8 @@ for brightness/contrast/shadow, padding for correlations,
 iterations for smoothing or anisotropic diffusion, size for
 median filter, criterion for determining outliers in statistics, value to add
 when undoing wraparound, number of images to analyze together for quadrant
-correction, bin size for histogram output, scaling for unpacking 4-bit values
-and applying a gain reference.
+correction, bin size for histogram output, scaling for multiply, divide, and 
+unpacking 4-bit values and applying a gain reference.
 .TP
 .B -r <value>
 Red value;   Range is (0.0 - 1.0) Default is 1.0.
@@ -583,9 +583,10 @@ input file must have
 a single "data channel" (i.e., byte, integer, or float) unless either a) the first input
 file is complex, in which case the second file can be either a single-channel
 or a complex file, or b) the output mode is float, in which case the second
-input file is converted to a single channel of float data.  There is no
-provision for scaling the output, but the mode can be changed to preserve
-resulting values outside the range of the input mode.
+input file is converted to a single channel of float data.  The 
+.B -n
+option can be used to set a factor for scaling the output, and the mode can be
+changed to preserve resulting values outside the range of the input mode.
 .TP
 .B quadrant
 Analyze and correct for differences between quadrants in images from
