@@ -1,5 +1,7 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+8/12/13: Added ability to scale output from clip multiply and divide.
+
 8/12/13: Fixed problems with values not showing up in the Directive Editor.
 (Bug# 1728)
 
